--- a/Drafts/tab_summ_elasticities.tex
+++ b/Drafts/tab_summ_elasticities.tex
@@ -32,8 +32,8 @@
 {\newcommand{\basediffdepr}{0.10}
 {\newcommand{\basefirstinv}{0.22}
 {\newcommand{\baselastinv}{0.29}
-{\newcommand{\basemednoprofit}{   .}
-{\newcommand{\basemeddepr}{   .}
+{\newcommand{\basemednoprofit}{0.328}
+{\newcommand{\basemeddepr}{0.206}
 {\newcommand{\basemeannoprofit}{0.337}
 {\newcommand{\baseminnoprofit}{0.291}
 {\newcommand{\basemaxnoprofit}{0.389}
